--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 </head>
 <body>
 
-<h1>عيد ميلاد سعيد يا قلبي ❤️</h1>
+<h1>عيد ميلاد سعيد يا عمري ❤️</h1>
 <p>كل عام وأنت الحب والفرحة في حياتنا!</p>
-<button onclick="showMessage()">اضغط لتعرف رسالة الحب 💌</button>
+<button onclick="showMessage()">كبسي هون لتشوفي رسالتك بوبو 💌</button>
 
 <script>
 function showMessage() {
