--- a/index.html
+++ b/index.html
@@ -42,12 +42,32 @@
   button:hover {
     background-color: #ff4d6d;
   }
+  .canva-embed {
+    position: relative;
+    width: 80%;
+    margin: 40px auto;
+    box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16);
+    border-radius: 8px;
+    overflow: hidden;
+  }
+  iframe {
+    width: 100%;
+    height: 500px;
+    border: none;
+  }
 </style>
 </head>
 <body>
 
 <h1>عيد ميلاد سعيد يا عمري ❤️</h1>
 <p>كل عام وأنت الحب والفرحة في حياتنا!</p>
+
+<!-- الصورة المتحركة من Canva -->
+<div class="canva-embed">
+  <iframe loading="lazy" src="https://www.canva.com/design/DAHAjHfBhJw/SvwHYRZC-7kkv9drSNWhvw/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+</div>
+<a href="https://www.canva.com/design/DAHAjHfBhJw/SvwHYRZC-7kkv9drSNWhvw/view?utm_content=DAHAjHfBhJw&utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank" rel="noopener" style="color:#fff;">تصميم بواسطة Grey</a>
+
 <button onclick="showMessage()">كبسي هون لتشوفي رسالتك بوبو 💌</button>
 
 <script>
